# Monitoring

./: .env.example  .gitignore  1.txt  CHANGELOG.en.md  CHANGELOG.md  Dockerfile  LICENSE  PROJECT_REPORT.md  README.md  config.example.yml  config.json  config.yml  dashboard_unified.py  deploy.ps1  deploy.sh  docker-compose.yml  fix_mypy.py  install.ps1  install.sh  install_collectors.ps1  install_exporter.ps1  install_exporter_full.ps1  install_we.bat  main.py  package-lock.json  plan.md  pymon.db-journal  pyproject.toml  reinstall_exporter.ps1  requirements.txt  run.bat  run.sh  telegraf.conf  telegraf_linux.conf  telegraf_windows.conf  test_node.py  test_playwright.py  test_simple.py  update.sh
.github/workflows/: ci.yml
agent/: install-linux.sh  install-windows.ps1
docs/: API.en.md  API.md  ARCHITECTURE.md  COMMANDS.md  DATA_SOURCES.md  MIGRATION.md  PHASE4_PLAN.md  TROUBLESHOOTING.md
examples/: api_examples.py  basic_usage.py
pymon/: .jwt_secret  __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  constants.py  dashboard_full.py  dashboard_grafana_style.py  database.py  fix_endpoints.py  middleware.py  notifications.py  scrape.py  test_ui.py  update_db.py  validation.py  web_dashboard.py  web_dashboard.py.backup  web_dashboard_enhanced.py  web_dashboard_simple.py  web_ui.py
pymon/agents/: scrape.py
pymon/alerts/: manager.py
pymon/api/: deps.py  endpoints.py  endpoints_fixed.py  models.py
pymon/components/: alerts_panel.py  cpu_chart.py  disk_monitor.py  memory_monitor.py  network_monitor.py
pymon/metrics/: __init__.py  collector.py  models.py  prometheus.py  system.py
pymon/middleware/: ratelimit.py
pymon/processors/: cpu_processor.py  (+3 more)
scripts/: backup.sh  config.sh  deploy_node_exporter.sh  deploy_telegraf_linux.sh  deploy_telegraf_windows.ps1  deploy_windows_exporter.ps1  install_windows_service.ps1  migrate_sqlite_to_postgres.py  restore.sh
tests/: conftest.py  test_api_contracts_phase3.py  test_auth.py  test_disk_processor.py  test_enhanced_api.py  test_integration_phase3.py  test_integration_phase3_all.py  test_integration_phase3_extra.py  test_metrics.py  test_network_processor.py  test_security_hardening.py
(+67 files in other folders)
